tests/cases/borrowing/errors/borrow-return-multiple-params.ari
fn pick(left: ref i64, right: ref i64) -> ref i64 {
  return left;
}

fn main() -> i64 {
  return 0;
}
